Thu Oct 28 07:03:28 2004  Chad Elliott  <elliott_c@ociweb.com>

        * examples/IPC_SAP/SOCK_SAP/CPP-unclient.cpp:
        * examples/IPC_SAP/SOCK_SAP/CPP-unserver.cpp:
        * examples/Reactor/Misc/pingpong.cpp:

          Added #include "ace/OS_NS_unistd.h" for ACE_OS::read,
          ACE_OS::unlink, ACE_OS::getpid and ACE_OS::fork.

        * performance-tests/SCTP/SOCK_STREAM_clt.cpp:

          Added #include "ace/OS_Memory.h" for ACE_NEW_RETURN.

Thu Oct 28 11:50:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/dsp2dsp.pl:
          Removed this file, dsp's are now generated with MPC

Thu Oct 28 06:21:40 2004  Chad Elliott  <elliott_c@ociweb.com>

        * ace/HTBP/HTBP_Session.cpp:

          Removed another extra semi-colon.

Thu Oct 28 00:27:57 2004  Olli Savia  <ops@iki.fi>

        * apps/JAWS/server/HTTP_Request.cpp:
          Replaced NULL with 0.

Wed Oct 27 16:22:49 2004  Steve Huston  <shuston@riverace.com>

        * ace/UNIX_Addr.{h i}: Added wchar_t variants of the char-accepting
          constructor and set() methods. Changed addr_to_string() to accept
          ACE_TCHAR, not char, for the buffer. This unifies it with the other
          address classes, restoring the ability to interchange it in
          the Acceptor/Connector framework.
        * ace/UNIX_Addr.cpp (set): Use strsncpy(), not memcpy(), to copy
          the rendezvous string in, assuring a null-terminated string.

        * examples/IPC_SAP/DEV_SAP/reader/dev_sap_reader.mpc:
        * examples/IPC_SAP/DEV_SAP/writer/dev_sap_writer.mpc:
          Added exename and Source_Files spec since there's no main().

        * examples/Reactor/Misc/Reactor_Misc.mpc: Added pingpong program.

        * examples/IPC_SAP/SOCK_SAP/sock_sap.mpc: Corrected names in
          CPP_unserver project and added CPP_unclient project.

        * examples/Connection/blocking/SPIPE-acceptor.{h cpp}:
        * examples/Connection/blocking/SPIPE-connector.{h cpp}: